Added up to three AY Chips
Added emulation of other DAC chips appart from Specdrum: Covox, etc
Added setting to set 256kb or 512kb on Spectrum 128k machines
Added setting to set F keys (F1, F2, etc) to run different actions: reset, nmi, exit emulator, etc
Added TBBlue Sprite chip emulation
Added RTC clock TBBlue/Spectrum Next support for esxdos
Improved TBBlue emulation: 1 MB RAM
Improved QL emulation: experimental support of LBYTES command, added QL root directory selector for mdv1, mdv2, flp1
Improved Sprite Viewer: Save sprite, TBBlue sprite viewer, inverse sprite
Improved write-mapped-memory remote command to allow up to 64kb
Fixed turbo mode and breakpoints. Breakpoints were disabled when changing turbo mode
Fixed latency problems on all audio drivers
Fixed AY sound bugs when volume levels where > 15
Fixed Windows pthreads version
Fixed tbblue reset i/o ports when reset and hard reset
Updated tbblue boot loader
Some other minor bugfixes and improvements



Version 5.0. 21 April 2017 - Chase H.Q. edition

Finally I have succeded emulating Sinclair QL. I dedicated a lot of hours trying to guess how the keyboard work.
There is little documentation and I had to do lots of dissassemblies of the ROM and testing keyboard to know how it work...
So, hard work, this is a Quantum Leap, so this is a new major version, 5.0!
Complete changelog:

Added Sinclair QL emulation
Added remote command protocol. You can do enhanced debugging on ZEsarUX by using a telnet client. 
  There are a lot of commands, even many commands exclusive to this protocol and not found on the GUI, like:
* load-source-code
* hexdump-internal
* set-register

Added Easter Egg ;)
Added Specdrum emulation
Added RZX playback support
Added Multiface One, 128 and Three emulation
Added setting to write configuration file
Added menu item to reload IDE and MMC contents from file. You can now modify a used file outside the emulator and reload its contents
Added autosave snapshot at fixed interval