@@ -14,6 +14,7 @@ Added setting to set 256kb or 512kb on Spectrum 128k machines
 Added setting to set F keys (F1, F2, etc) to run different actions: reset, nmi, exit emulator, etc
 Added TBBlue Sprite chip emulation
 Added RTC clock TBBlue/Spectrum Next support for esxdos
+Added ZXUno Radasoffset and Radaspadding registers, to do hardware scrolling
 Improved TBBlue emulation: 1 MB RAM
 Improved QL emulation: experimental support of LBYTES command, added QL root directory selector for mdv1, mdv2, flp1
 Improved Sprite Viewer: Save sprite, TBBlue sprite viewer, inverse sprite
